--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,11 @@
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
     "firebase": "^7.9.0",
+    "link-preview-js": "^2.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
