--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-fullwidth-image": "^0.1.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "~1.13.0",
